# piku

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/CANONICAL/: 01_PRODUCT_VISION.md  02_CURRENT_STATE.md  03_ARCHITECTURE.md  04_ROADMAP.md  05_DECISIONS.md
docs/portfolio/: DESIGN_DOC.md
resources/: project 
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey_manager.rs  ipc.rs  lib.rs  main.rs  oauth.rs  observer.rs  os_tools.rs  tray_manager.rs  tts.rs  vault.rs  webwin.rs  window_manager.rs
src/features/chat/: index.ts
src/features/graph/: DocumentChunker.ts  DocumentSeeder.ts  EntityExtractor.ts  GraphActivityLog.ts  GraphExtractionService.ts  GraphService.ts  GraphStore.ts  index.ts  types.ts
src/features/memory/: AgentContextStore.ts  ConversationStore.ts  ConversationSummaryService.ts  EmbeddingService.ts  MemoryExtractionService.ts  MemoryRetrievalService.ts  MemoryService.ts  MemoryStore.ts  SummaryStore.ts  _math.ts  db.ts  index.ts  types.ts
src/features/orb/: index.ts  variants.ts
src/features/os/: Card.tsx  CommandCenter.tsx  CyberBackground.tsx  Dashboard.tsx  Dock.tsx  HomeOS.tsx  Hud.tsx  Shell.tsx  (+1 more)
src/hooks/: useAppState.ts  useIpc.ts
src/lib/: logger.ts  persona.ts  stripUtils.ts
src/services/: ActiveAppObserver.ts  OllamaService.ts  OpencodeProvider.ts  ProjectBrainService.ts  ReasoningPlanner.ts  ToolRouter.ts  VoiceService.ts  webwin.ts
src/types/: index.ts
(+74 files in other folders)
